@@ -1,3 +1,4 @@
+* Use actual quantity of sale line
 
 Version 7.4.0 - 2024-11-04
 --------------------------
